#1 :bug: z-index 수정
Former-commit-id: b3f66c9a119837470d997f54bb506cdb41ae3bfa

--- a/catchcatch/source/CSS/UI/stagepage.css
+++ b/catchcatch/source/CSS/UI/stagepage.css
@@ -13,7 +13,6 @@
   background-size: contain;
   border: none;
   position: relative;
-  z-index: 3;
   /* border: 2px solid red; */
   /* border: 6px solid blue; */
 }
@@ -107,7 +106,6 @@
   height: 30px;
   left: 8px;
   top: 8px;
-  z-index: 3;
 }
 .BackIcon:active {
   background: url("../../../public/images/ui/backiconclick.png");
